# Final_Data_Mining

./: README.md  main.py  pyproject.toml  requirements.txt
data/: BID_full.csv  BID_test.csv  BID_train.csv  BTC_full.csv  BTC_test.csv  BTC_train.csv  BTC_val.csv  ETH_full.csv  ETH_test.csv  ETH_train.csv  ETH_val.csv  FPT_full.csv  FPT_test.csv  FPT_train.csv  HVN_full.csv  HVN_test.csv  HVN_train.csv  HVN_val.csv  VJC_full.csv  VJC_test.csv  VJC_train.csv
ultilities/: pipeline_phase1.py  pipeline_phase2.py  pipeline_phase3.py  streamlit_app.py
v10_Trung/: analyse_data.py  app.py  backtest.py  data_collector.py  data_preprocessing.py  evaluation.py  feature_engineering.py  model.py
v10_Trung/data_cache/: HVN_vnstock.csv  HVN_vnstock.parquet  fe.csv  nan.csv
