[project]
name = "final-data-mining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas<3",
    "plotpy>=2.10.0",
    "scikit-learn>=1.7.2",
    "setuptools>=82.0.1",
    "streamlit>=1.58.0",
    "streamlit-ydata-profiling>=0.2.1",
    "vnstock>=4.0.2",
    "vnstock3>=3.2.1",
    "ydata-profiling>=4.6.3",
    "yfinance>=1.4.1",
]
